# camera_engine_rkaiq

./: CMakeLists.txt  RkAiqManager.cpp  RkAiqManager.h  RkAiqVersion.h
aiq_core/: RkAiqCore.cpp  RkAiqCore.h  RkAiqHandle.cpp  RkAiqHandle.h  RkAiqHandleInt.cpp  RkAiqHandleInt.h  RkLumaCore.h
algos/: CMakeLists.txt  rk_aiq_algo_types.h  rk_aiq_algo_types_int.h
common/: rk_aiq_pool.h  rk_aiq_types_priv.h
hwi/: CamHwBase.cpp  CamHwBase.h  ICamHw.h  LensHw.cpp  LensHw.h  SensorHw.cpp
ipc_server/: command_process.cpp  rkaiq_tool_sysctl.cpp  socket_server.cpp
iq_parser/: RkAiqCalibDb.cpp  RkAiqCalibDb.h  RkAiqCalibParser.cpp  RkAiqCalibParser.h  RkAiqCalibTag.cpp  RkAiqCalibTag.h  RkAiqCalibVersion.h  calibtags.h
iq_parser_v2/: RkAiqCalibDbV2.cpp
iqfiles/: gc02m2_KYT-4877-V01_default.xml  gc2053_CMK-OT1726-PG1_29IR-2MP-F25.xml  gc2053_YT-RV1109-2-V1_40IR-2MP-F20.xml  gc2093_BFC105-DUAL-L_IR.xml  gc2093_BFC105-DUAL-L_IRC.xml  gc2093_YT-RV1109-2-V1_40IR-2MP-F20.xml  gc4663_TRC-2232A6_28IRC-4M-F22-v1.0x23.xml  gc4c33_PCORW0009A_40IRC-4M.xml  gc5035_KYT-4877-V01_default.xml  gc8034_RK-CMK-8M-2-v1_CK8401.xml  imx307_CMK-OT0837-PT2_YT-2929_UNV-40IRC-2M-F20.xml  imx307_MTV4-IR-E-P_40IRC-4MP-F16-hdr3.xml  imx307_MTV4-IR-E-P_40IRC-4MP-F16.xml  imx334_CMK-OT1522-FG3_CS-P1150-IRC-8M-FAU.xml  imx334_CMK-OT1522-FG3_CS-P1150IR.xml  imx335_MTV4-IR-E-P_40IRC-4MP-F16-cropped.xml  imx335_MTV4-IR-E-P_40IRC-4MP-F16.xml  imx347_JSD3425-C1_40IRC.xml  imx378_A12N01B_48IRC-12M-F18.xml  imx415_YT-RK415-V1_IR0147-60IRC-8M-F20.xml  imx415_YT10092_IR0147-28IRC-8M-F20-hdr3.xml  imx415_YT10092_IR0147-28IRC-8M-F20.xml  imx415_YT10092_IR0147-36IRC-8M-F20-hdr3.xml  imx415_YT10092_IR0147-36IRC-8M-F20.xml  imx415_YT10092_IR0147-50IRC-8M-F20.xml  imx415_YT10092_IR0147-60IRC-8M-F20-hdr3.xml  imx415_YT10092_IR0147-60IRC-8M-F20.xml  imx415_YT10092_IR0147.xml  jx_f37_AXF37AA_SR2012A.xml  os04a10_CMK-OT1607-FV1_M12-40IRC-4MP-F16.xml  os04a10_CMK-OT1607-FV1_M12-4IR-4MP-F16.xml  os04a10_CMK-OT1607-FV1_M12-60IRC-4MP-F16.xml  os04a10_CMK-OT1607-FV1_M12-6IR-4MP-F16.xml  ov02b10_AW02V05_12IRC-2M-F22.xml  ov02k10_O2F0068_2D2A-40IRC-2M-F18.xml  ov02k10_ORCF-0249-00-PD-V1_xuye.xml  ov2718_YT-RV1109-3-V1_M43-4IR-2MP-F2.xml  ov2718_YT-RV1109-3-V1_M43-4IR-2MP-F2_normal.xml  ov4689_JSD3425-C1_JSD3425-C1-36IRC-4M-F20.xml  s5k4h7yx_PCORW0009A_4mm-4M.xml  (+8 more)
media_enquiry/: CMakeLists.txt
rkaiq/: RkAiqCamGroupManager.cpp  RkAiqManager.cpp  RkAiqManager.h  RkAiqVersion.h
rkaiq_3A_server/: CMakeLists.txt  rkaiq_3A_server.cpp
rkaiq_tool_server/: build.sh  rkaiq_tool_server.cpp
rkisp2x_tuner/: rkisp2x_tuner_version.txt
rkisp_api/: CMakeLists.txt  rkisp_api.cpp  rkisp_api.h
rkisp_demo/: CMakeLists.txt
rkisp_parser_demo/: CMakeLists.txt
uAPI/: rk_aiq_user_api_af.cpp  rk_aiq_user_api_aie.cpp  rk_aiq_user_api_imgproc.cpp  rk_aiq_user_api_sysctl.cpp
(+207 files in other folders)
